# sweet

./: CMakeLists.txt  README.md  index.html  params.json
src/: ConsoleEditor.hpp  FileTarget.hpp  MemoryNode.hpp  MemoryTarget.hpp  TargetTraits.hpp  main.cpp
test/: FileTargetTest.cpp  MemoryTargetTest.cpp  fileUtils.hpp
